--- a/index.html
+++ b/index.html
@@ -133,6 +133,27 @@
         </div>
       </div>
     </section>
+    <section class="grid" style="margin-top:60px">
+      <div class="card" style="grid-column:1/-1; text-align:center;">
+        <img src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Diamond_hoop_earrings_baroque_style.webp?v=1757717068" alt="Handmade gold jewelry by Oltremare Gioielli in Italy" style="width:100%; max-width:600px; height:auto; border-radius:12px; margin-bottom:20px;">
+        <h2>About the Brand</h2>
+        <p style="max-width:700px; margin:0 auto; color:var(--muted); font-size:17px;">
+          Oltremare Gioielli celebrates the beauty of Italian craftsmanship. Each jewel is designed and handmade in Italy with meticulous care, using 14k & 18k solid gold, natural gemstones, and ethical diamonds.  
+          Our creations blend sculptural modern design with the timeless soul of Italian heritage.
+        </p>
+      </div>
+    </section>
+
+    <div style="margin-top:60px; text-align:center;">
+      <h3>🌍 Explore in your language</h3>
+      <div style="margin-top:14px; display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">
+        <a href="https://www.oltremaregioielli.it/it" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Italiano</a>
+        <a href="https://www.oltremaregioielli.it/fr" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Français</a>
+        <a href="https://www.oltremaregioielli.it/de" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Deutsch</a>
+        <a href="https://www.oltremaregioielli.it/es" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Español</a>
+        <a href="https://www.oltremaregioielli.it" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">English</a>
+      </div>
+    </div>
 
     <footer>
       <div class="social" aria-label="Social links">
