--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
         <h3>Featured pieces</h3>
         <div class="gallery">
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/statement-rings-oltremare.jpg?v=1730310000" alt="Italian statement ring in 18k gold" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/products/South-Sea-Pearl-Gold-Ring-made-in-Italy-el119-14.png?v=1751235340&width=1646" alt="Italian statement ring in 18k gold" />
             <strong>Statement Rings</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/statement-rings">Shop rings →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/necklaces-oltremare.jpg?v=1730310000" alt="Handmade gold necklaces made in Italy" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&width=1646" alt="Handmade gold necklaces made in Italy" />
             <strong>Necklaces & Pendants</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/necklaces-pendants">Shop necklaces →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/hoops-oltremare.jpg?v=1730310000" alt="Italian gold hoop earrings" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/products/27mm-hoop-earrings-baroque-style-fid04-1.png?v=1751235541&width=1646" alt="Italian gold hoop earrings" />
             <strong>Hoop Earrings</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/hoop-earrings">Shop hoops →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/mens-oltremare.jpg?v=1730310000" alt="Men's gold jewelry made in Italy" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&width=1646" alt="Men's gold jewelry made in Italy" />
             <strong>Men's Jewelry</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/mens-jewelry">Shop men →</a>
           </div>
