--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://oltremaregioielli.github.io/" />
-  <meta property="og:image" content="https://www.oltremaregioielli.it/cdn/shop/files/Logo_Nero_OLTREMARE_GIOIELLI.png" />
+  <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
   <link rel="icon" href="images/logo.png" />
   <style>
     :root {
