--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://oltremaregioielli.github.io/" />
   <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
-  <link rel="icon" href="images/logo.png" />
+  <link rel="icon" href="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
   <style>
     :root {
       --bg: #ede8e4;      /* requested background */
