--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Oltremare Gioielli — Italian Fine Jewelry</title>
-  <meta name="description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
-  <meta property="og:title" content="Oltremare Gioielli — Italian Fine Jewelry" />
-  <meta property="og:description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://oltremaregioielli.github.io/" />
-   <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
-  <link rel="icon" href="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
-  <style>
+
     :root {
       --bg: #ede8e4;      /* requested background */
       --text: #111111;
@@ -79,7 +66,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <img src="https://www.oltremaregioielli.it/cdn/shop/files/Logo_Nero_OLTREMARE_GIOIELLI.png" alt="Oltremare Gioielli logo" />
+        <img src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" alt="Oltremare Gioielli logo" width="220" height="auto" loading="eager" decoding="async" />
       </div>
       <nav class="nav" aria-label="Primary">
         <a href="https://www.oltremaregioielli.it/collections/statement-rings">Statement Rings</a>
@@ -111,49 +98,28 @@
         <h3>Featured pieces</h3>
         <div class="gallery">
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/products/South-Sea-Pearl-Gold-Ring-made-in-Italy-el119-14.png?v=1751235340&width=1646" alt="Italian statement ring in 18k gold" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/statement-rings-oltremare.jpg?v=1730310000" alt="Italian statement ring in 18k gold" />
             <strong>Statement Rings</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/statement-rings">Shop rings →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&width=1646" alt="Handmade gold necklaces made in Italy" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/necklaces-oltremare.jpg?v=1730310000" alt="Handmade gold necklaces made in Italy" />
             <strong>Necklaces & Pendants</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/necklaces-pendants">Shop necklaces →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/products/27mm-hoop-earrings-baroque-style-fid04-1.png?v=1751235541&width=1646" alt="Italian gold hoop earrings" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/hoops-oltremare.jpg?v=1730310000" alt="Italian gold hoop earrings" />
             <strong>Hoop Earrings</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/hoop-earrings">Shop hoops →</a>
           </div>
           <div class="tile">
-            <img src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&width=1646" alt="Men's gold jewelry made in Italy" />
+            <img src="https://www.oltremaregioielli.it/cdn/shop/articles/mens-oltremare.jpg?v=1730310000" alt="Men's gold jewelry made in Italy" />
             <strong>Men's Jewelry</strong>
             <a class="more" href="https://www.oltremaregioielli.it/collections/mens-jewelry">Shop men →</a>
           </div>
         </div>
       </div>
     </section>
-    <section class="grid" style="margin-top:60px">
-      <div class="card" style="grid-column:1/-1; text-align:center;">
-        <img src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Diamond_hoop_earrings_baroque_style.webp?v=1757717068" alt="Handmade gold jewelry by Oltremare Gioielli in Italy" style="width:100%; max-width:600px; height:auto; border-radius:12px; margin-bottom:20px;">
-        <h2>About the Brand</h2>
-        <p style="max-width:700px; margin:0 auto; color:var(--muted); font-size:17px;">
-          Oltremare Gioielli celebrates the beauty of Italian craftsmanship. Each jewel is designed and handmade in Italy with meticulous care, using 14k & 18k solid gold, natural gemstones, and ethical diamonds.  
-          Our creations blend sculptural modern design with the timeless soul of Italian heritage.
-        </p>
-      </div>
-    </section>
-
-    <div style="margin-top:60px; text-align:center;">
-      <h3>🌍 Explore in your language</h3>
-      <div style="margin-top:14px; display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">
-        <a href="https://www.oltremaregioielli.it/it" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Italiano</a>
-        <a href="https://www.oltremaregioielli.it/fr" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Français</a>
-        <a href="https://www.oltremaregioielli.it/de" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Deutsch</a>
-        <a href="https://www.oltremaregioielli.it/es" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">Español</a>
-        <a href="https://www.oltremaregioielli.it" style="padding:10px 14px; border-radius:999px; background:rgba(0,0,0,0.05)">English</a>
-      </div>
-    </div>
 
     <footer>
       <div class="social" aria-label="Social links">
