--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <!-- Featured pieces (4 cards) -->
       <div class="card">
-        <img src="images/statement-rings.jpg" alt="Italian statement ring in 18k gold" loading="lazy"
+        <img src="https://www.oltremaregioielli.it/cdn/shop/products/pediment_20-greek_20gods_20ring_20_20gold_2018k_2014k_20made_20in_20Italy1.png?v=1751235507&width=1646" loading="lazy"
              onerror="this.src='https://via.placeholder.com/800x500?text=Statement+Rings';" />
         <h3>Statement Rings</h3>
         <p>Contemporary designs with bold elegance.</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card">
-        <img src="images/necklaces.jpg" alt="Handmade gold necklaces made in Italy" loading="lazy"
+        <img src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&width=1646" loading="lazy"
              onerror="this.src='https://via.placeholder.com/800x500?text=Necklaces+%26+Pendants';" />
         <h3>Necklaces &amp; Pendants</h3>
         <p>Refined Italian artistry, timeless beauty.</p>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="card">
-        <img src="images/hoops.jpg" alt="Italian gold hoop earrings" loading="lazy"
+        <img src="https://www.oltremaregioielli.it/cdn/shop/products/contemporary-moder-hoop-earrings-gold-14k-18k-Italy-pol60-11.png?v=1751235494&width=1646" loading="lazy"
              onerror="this.src='https://via.placeholder.com/800x500?text=Hoop+Earrings';" />
         <h3>Hoop Earrings</h3>
         <p>Modern shapes and sculptural charm.</p>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="card">
-        <img src="images/mens.jpg" alt="Men's gold jewelry made in Italy" loading="lazy"
+        <img src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&width=1646" loading="lazy"
              onerror="this.src='https://via.placeholder.com/800x500?text=Men%27s+Jewelry';" />
         <h3>Men's Jewelry</h3>
         <p>Bold designs with timeless strength.</p>
