--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <!-- Header -->
     <header>
       <div class="brand">
-        <img src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383"
-             alt="Oltremare Gioielli logo" />
+        <img
+          src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383"
+          alt="Oltremare Gioielli logo"
+          width="220"
+          style="max-width:220px;height:auto"
+        />
       </div>
       <nav class="nav" aria-label="Primary">
         <a href="https://www.oltremaregioielli.it/collections/statement-rings" rel="noopener">Statement Rings</a>
@@ -38,7 +42,7 @@
       <a class="cta" href="https://www.oltremaregioielli.it" target="_blank" rel="noopener">Explore the Collection</a>
     </section>
 
-    <!-- Highlights -->
+    <!-- Highlights + Featured -->
     <section class="grid" aria-label="Highlights">
       <div class="card">
         <h3>What makes us unique</h3>
@@ -50,48 +54,67 @@
         </ul>
       </div>
 
-      <!-- Featured pieces (4 cards) -->
+      <!-- Statement Rings -->
       <div class="card">
-        <img src="https://www.oltremaregioielli.it/cdn/shop/products/pediment_20-greek_20gods_20ring_20_20gold_2018k_2014k_20made_20in_20Italy1.png?v=1751235507&width=1646" loading="lazy"
-             onerror="this.src='https://via.placeholder.com/800x500?text=Statement+Rings';" />
+        <img
+          src="https://www.oltremaregioielli.it/cdn/shop/products/pediment_20-greek_20gods_20ring_20_20gold_2018k_2014k_20made_20in_20Italy1.png?v=1751235507&amp;width=1646"
+          alt="Italian statement ring in 18k gold — Pediments Greek Gods"
+          loading="lazy" decoding="async"
+          onerror="this.src='https://via.placeholder.com/800x500?text=Statement+Rings';"
+        />
         <h3>Statement Rings</h3>
         <p>Contemporary designs with bold elegance.</p>
         <a href="https://www.oltremaregioielli.it/collections/statement-rings" rel="noopener">Shop rings →</a>
       </div>
 
+      <!-- Necklaces & Pendants -->
       <div class="card">
-        <img src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&width=1646" loading="lazy"
-             onerror="this.src='https://via.placeholder.com/800x500?text=Necklaces+%26+Pendants';" />
+        <img
+          src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&amp;width=1646"
+          alt="Italian gold heart pendant necklace — handmade"
+          loading="lazy" decoding="async"
+          onerror="this.src='https://via.placeholder.com/800x500?text=Necklaces+%26+Pendants';"
+        />
         <h3>Necklaces &amp; Pendants</h3>
         <p>Refined Italian artistry, timeless beauty.</p>
         <a href="https://www.oltremaregioielli.it/collections/necklaces-pendants" rel="noopener">Shop necklaces →</a>
       </div>
 
+      <!-- Hoop Earrings -->
       <div class="card">
-        <img src="https://www.oltremaregioielli.it/cdn/shop/products/contemporary-moder-hoop-earrings-gold-14k-18k-Italy-pol60-11.png?v=1751235494&width=1646" loading="lazy"
-             onerror="this.src='https://via.placeholder.com/800x500?text=Hoop+Earrings';" />
+        <img
+          src="https://www.oltremaregioielli.it/cdn/shop/products/contemporary-moder-hoop-earrings-gold-14k-18k-Italy-pol60-11.png?v=1751235494&amp;width=1646"
+          alt="Contemporary Italian gold hoop earrings 14k 18k"
+          loading="lazy" decoding="async"
+          onerror="this.src='https://via.placeholder.com/800x500?text=Hoop+Earrings';"
+        />
         <h3>Hoop Earrings</h3>
         <p>Modern shapes and sculptural charm.</p>
         <a href="https://www.oltremaregioielli.it/collections/hoop-earrings" rel="noopener">Shop hoops →</a>
       </div>
 
+      <!-- Men's Jewelry -->
       <div class="card">
-        <img src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&width=1646" loading="lazy"
-             onerror="this.src='https://via.placeholder.com/800x500?text=Men%27s+Jewelry';" />
+        <img
+          src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&amp;width=1646"
+          alt="Men's gold ring Jaguar — Italian men's jewelry"
+          loading="lazy" decoding="async"
+          onerror="this.src='https://via.placeholder.com/800x500?text=Men%27s+Jewelry';"
+        />
         <h3>Men's Jewelry</h3>
         <p>Bold designs with timeless strength.</p>
         <a href="https://www.oltremaregioielli.it/collections/mens-jewelry" rel="noopener">Shop men →</a>
       </div>
     </section>
 
-    <!-- About + Languages -->
+    <!-- About -->
     <section class="grid" style="margin-top:60px">
       <div class="card" style="grid-column:1/-1; text-align:center;">
         <img
           src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Diamond_hoop_earrings_baroque_style.webp?v=1757717068"
           alt="Handmade gold jewelry by Oltremare Gioielli in Italy"
           style="width:100%; max-width:600px; height:auto; border-radius:12px; margin-bottom:20px;"
-          loading="lazy"
+          loading="lazy" decoding="async"
         />
         <h2>About the Brand</h2>
         <p style="max-width:700px; margin:0 auto; color:var(--muted); font-size:17px;">
@@ -102,6 +125,7 @@
       </div>
     </section>
 
+    <!-- Languages -->
     <div style="margin-top:24px; text-align:center;">
       <h3>🌍 Explore in your language</h3>
       <div style="margin-top:14px; display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">
