--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <meta property="og:title" content="Oltremare Gioielli — Italian Fine Jewelry" />
   <meta property="og:description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://oltremaregioielli-ops.github.io/oltremaregioielli/" />
   <link rel="icon" href="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Logo_nero_sito.webp?v=1754581383" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=3" />
 </head>
 <body>
   <div class="container">
@@ -25,15 +24,15 @@
         />
       </div>
       <nav class="nav" aria-label="Primary">
-        <a href="https://www.oltremaregioielli.it/collections/statement-rings" rel="noopener">Statement Rings</a>
-        <a href="https://www.oltremaregioielli.it/collections/necklaces-pendants" rel="noopener">Necklaces</a>
-        <a href="https://www.oltremaregioielli.it/collections/hoop-earrings" rel="noopener">Hoop Earrings</a>
-        <a href="https://www.oltremaregioielli.it/collections/mens-jewelry" rel="noopener">Men</a>
+        <a href="https://www.oltremaregioielli.it/collections/statement-rings">Statement Rings</a>
+        <a href="https://www.oltremaregioielli.it/collections/necklaces-pendants">Necklaces</a>
+        <a href="https://www.oltremaregioielli.it/collections/hoop-earrings">Hoop Earrings</a>
+        <a href="https://www.oltremaregioielli.it/collections/mens-jewelry">Men</a>
       </nav>
     </header>
 
     <!-- Hero -->
-    <section class="hero" role="banner">
+    <section class="hero">
       <h1>Italian Fine Jewelry — Handmade to Order</h1>
       <p>
         Exquisite 14k & 18k gold creations crafted in Italy with natural gemstones and ethical diamonds.
@@ -42,113 +41,117 @@
       <a class="cta" href="https://www.oltremaregioielli.it" target="_blank" rel="noopener">Explore the Collection</a>
     </section>
 
-    <!-- Highlights + Featured -->
-    <section class="grid" aria-label="Highlights">
-      <div class="card">
+    <!-- Cards -->
+    <section class="cards">
+      <!-- USP -->
+      <article class="card">
         <h3>What makes us unique</h3>
-        <ul>
+        <ul class="bullets">
           <li><strong>Made in Italy</strong> from design to finishing.</li>
           <li><strong>14k & 18k</strong> solid gold, crafted to order.</li>
           <li><strong>Natural gemstones</strong> and ethical diamonds.</li>
           <li>Modern, sculptural aesthetics with an artisanal soul.</li>
         </ul>
-      </div>
+      </article>
 
       <!-- Statement Rings -->
-      <div class="card">
-        <img
-          src="https://www.oltremaregioielli.it/cdn/shop/products/pediment_20-greek_20gods_20ring_20_20gold_2018k_2014k_20made_20in_20Italy1.png?v=1751235507&amp;width=1646"
-          alt="Italian statement ring in 18k gold — Pediments Greek Gods"
-          loading="lazy" decoding="async"
-          onerror="this.src='https://via.placeholder.com/800x500?text=Statement+Rings';"
-        />
+      <article class="card">
+        <div class="media">
+          <img
+            src="https://www.oltremaregioielli.it/cdn/shop/products/pediment_20-greek_20gods_20ring_20_20gold_2018k_2014k_20made_20in_20Italy1.png?v=1751235507&amp;width=1646"
+            alt="Italian statement ring in 18k gold — Pediments Greek Gods"
+            loading="lazy" decoding="async"
+          />
+        </div>
         <h3>Statement Rings</h3>
         <p>Contemporary designs with bold elegance.</p>
-        <a href="https://www.oltremaregioielli.it/collections/statement-rings" rel="noopener">Shop rings →</a>
-      </div>
+        <a class="more" href="https://www.oltremaregioielli.it/collections/statement-rings">Shop rings →</a>
+      </article>
 
       <!-- Necklaces & Pendants -->
-      <div class="card">
-        <img
-          src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&amp;width=1646"
-          alt="Italian gold heart pendant necklace — handmade"
-          loading="lazy" decoding="async"
-          onerror="this.src='https://via.placeholder.com/800x500?text=Necklaces+%26+Pendants';"
-        />
+      <article class="card">
+        <div class="media">
+          <img
+            src="https://www.oltremaregioielli.it/cdn/shop/files/heart-gold-pendant-necklace-italian-made_copia_bda586f7-228c-4200-a2b7-092f7f2c65c0.webp?v=1756858937&amp;width=1646"
+            alt="Italian gold heart pendant necklace — handmade"
+            loading="lazy" decoding="async"
+          />
+        </div>
         <h3>Necklaces &amp; Pendants</h3>
         <p>Refined Italian artistry, timeless beauty.</p>
-        <a href="https://www.oltremaregioielli.it/collections/necklaces-pendants" rel="noopener">Shop necklaces →</a>
-      </div>
+        <a class="more" href="https://www.oltremaregioielli.it/collections/necklaces-pendants">Shop necklaces →</a>
+      </article>
 
       <!-- Hoop Earrings -->
-      <div class="card">
-        <img
-          src="https://www.oltremaregioielli.it/cdn/shop/products/contemporary-moder-hoop-earrings-gold-14k-18k-Italy-pol60-11.png?v=1751235494&amp;width=1646"
-          alt="Contemporary Italian gold hoop earrings 14k 18k"
-          loading="lazy" decoding="async"
-          onerror="this.src='https://via.placeholder.com/800x500?text=Hoop+Earrings';"
-        />
+      <article class="card">
+        <div class="media">
+          <img
+            src="https://www.oltremaregioielli.it/cdn/shop/products/contemporary-moder-hoop-earrings-gold-14k-18k-Italy-pol60-11.png?v=1751235494&amp;width=1646"
+            alt="Contemporary Italian gold hoop earrings 14k 18k"
+            loading="lazy" decoding="async"
+          />
+        </div>
         <h3>Hoop Earrings</h3>
         <p>Modern shapes and sculptural charm.</p>
-        <a href="https://www.oltremaregioielli.it/collections/hoop-earrings" rel="noopener">Shop hoops →</a>
-      </div>
+        <a class="more" href="https://www.oltremaregioielli.it/collections/hoop-earrings">Shop hoops →</a>
+      </article>
 
       <!-- Men's Jewelry -->
-      <div class="card">
-        <img
-          src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&amp;width=1646"
-          alt="Men's gold ring Jaguar — Italian men's jewelry"
-          loading="lazy" decoding="async"
-          onerror="this.src='https://via.placeholder.com/800x500?text=Men%27s+Jewelry';"
-        />
+      <article class="card">
+        <div class="media">
+          <img
+            src="https://www.oltremaregioielli.it/cdn/shop/files/Jaguar-mens-gold-ring-fid77-1.webp?v=1751235226&amp;width=1646"
+            alt="Men's gold ring Jaguar — Italian men's jewelry"
+            loading="lazy" decoding="async"
+          />
+        </div>
         <h3>Men's Jewelry</h3>
         <p>Bold designs with timeless strength.</p>
-        <a href="https://www.oltremaregioielli.it/collections/mens-jewelry" rel="noopener">Shop men →</a>
-      </div>
+        <a class="more" href="https://www.oltremaregioielli.it/collections/mens-jewelry">Shop men →</a>
+      </article>
     </section>
 
     <!-- About -->
-    <section class="grid" style="margin-top:60px">
-      <div class="card" style="grid-column:1/-1; text-align:center;">
-        <img
-          src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Diamond_hoop_earrings_baroque_style.webp?v=1757717068"
-          alt="Handmade gold jewelry by Oltremare Gioielli in Italy"
-          style="width:100%; max-width:600px; height:auto; border-radius:12px; margin-bottom:20px;"
-          loading="lazy" decoding="async"
-        />
-        <h2>About the Brand</h2>
-        <p style="max-width:700px; margin:0 auto; color:var(--muted); font-size:17px;">
-          Oltremare Gioielli celebrates the beauty of Italian craftsmanship. Each jewel is designed and handmade in Italy with
-          meticulous care, using 14k &amp; 18k solid gold, natural gemstones, and ethical diamonds. Our creations blend
-          sculptural modern design with the timeless soul of Italian heritage.
-        </p>
+    <section class="about">
+      <div class="about-inner">
+        <div class="about-media">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0811/0922/1721/files/Diamond_hoop_earrings_baroque_style.webp?v=1757717068"
+            alt="Handmade gold jewelry by Oltremare Gioielli in Italy"
+            loading="lazy" decoding="async"
+          />
+        </div>
+        <div class="about-text">
+          <h2>About the Brand</h2>
+          <p>
+            Oltremare Gioielli celebrates the beauty of Italian craftsmanship. Each jewel is designed and handmade in Italy with meticulous care,
+            using 14k &amp; 18k solid gold, natural gemstones, and ethical diamonds. Our creations blend sculptural modern design with the timeless soul of Italian heritage.
+          </p>
+        </div>
       </div>
     </section>
 
-    <!-- Languages -->
-    <div style="margin-top:24px; text-align:center;">
+    <!-- Languages + Footer -->
+    <section class="languages">
       <h3>🌍 Explore in your language</h3>
-      <div style="margin-top:14px; display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">
-        <a class="pill" href="https://www.oltremaregioielli.it/it" rel="noopener">Italiano</a>
-        <a class="pill" href="https://www.oltremaregioielli.it/fr" rel="noopener">Français</a>
-        <a class="pill" href="https://www.oltremaregioielli.it/de" rel="noopener">Deutsch</a>
-        <a class="pill" href="https://www.oltremaregioielli.it/es" rel="noopener">Español</a>
-        <a class="pill" href="https://www.oltremaregioielli.it" rel="noopener">English</a>
+      <div class="lang-links">
+        <a class="pill" href="https://www.oltremaregioielli.it/it">Italiano</a>
+        <a class="pill" href="https://www.oltremaregioielli.it/fr">Français</a>
+        <a class="pill" href="https://www.oltremaregioielli.it/de">Deutsch</a>
+        <a class="pill" href="https://www.oltremaregioielli.it/es">Español</a>
+        <a class="pill" href="https://www.oltremaregioielli.it">English</a>
       </div>
-    </div>
+    </section>
 
-    <!-- Footer -->
     <footer>
-      <div class="social" aria-label="Social links">
+      <div class="social">
         <a class="pill" href="https://www.instagram.com/oltremare_gioielli_italy" target="_blank" rel="noopener">Instagram</a>
         <a class="pill" href="https://www.facebook.com/oltremaregioielli" target="_blank" rel="noopener">Facebook</a>
         <a class="pill" href="https://oltremaregioielli.etsy.com" target="_blank" rel="noopener">Etsy</a>
         <a class="pill" href="https://www.oltremaregioielli.it" target="_blank" rel="noopener">Website</a>
         <a class="pill" href="mailto:info@oltremaregioielli.it">Contact</a>
       </div>
-      <p style="margin-top:14px;color:var(--muted);font-size:14px">
-        © <span id="y"></span> Oltremare Gioielli — Handmade in Italy
-      </p>
+      <p>© <span id="y"></span> Oltremare Gioielli — Handmade in Italy</p>
     </footer>
   </div>
 
