--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Oltremare Gioielli — Italian Fine Jewelry</title>
-  <meta name="description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
+  <link rel="canonical" href="https://www.oltremaregioielli.it/">
+<meta name="robots" content="noindex,follow">
+<meta name="description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
   <meta property="og:title" content="Oltremare Gioielli — Italian Fine Jewelry" />
   <meta property="og:description" content="Timeless fine jewelry designed and handmade in Italy. Exquisite 14k & 18k gold pieces crafted to order with natural gemstones and ethical diamonds." />
   <meta property="og:type" content="website" />
